--- a/style.css
+++ b/style.css
@@ -2202,7 +2202,7 @@ hr{
 
 /*  pre loader css */
 .preLoader{
-  display: flex;
+  display: none;
   width: 100vw;
   height: 100vh;
   background: black;
